fixed scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,3 @@ html, body {
     padding: 0;
 }
 
-* {
-    overflow: hidden;
-}
