--- a/src/components/Filters.module.css
+++ b/src/components/Filters.module.css
@@ -4,7 +4,7 @@
     width: 80%;
     justify-content: space-between;
     justify-items: center;
-    background-color: #3c4c64f1;
+    background-color: #3c4c64f6;
     padding: 5em 4em;
     border-radius: 1.5em;
     height: 40rem;
